--- a/timetable/templates/timetable/index.html
+++ b/timetable/templates/timetable/index.html
@@ -5,13 +5,10 @@
   <meta charset="utf-8">
   <meta name="author" content="Kodinger">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>My Login Page</title>
+  <title>Timetable</title>
   <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="{% static 'timetable/my-login.css' %}">
-  <script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
   <script src="{% static 'timetable/my-login.js' %}"></script>
 </head>
@@ -22,12 +19,12 @@
       <div class="row justify-content-md-center h-100">
         <div class="card-wrapper">
           <div class="brand">
-            <img src="img/logo.jpg" alt="logo">
+            <img src="{% static 'timetable/mec.jpg' %}" alt="logo">
           </div>
           <div class="card fat">
             <div class="card-body">
               <h4 class="card-title">Login</h4>
-              <form method="POST" class="my-login-validation" novalidate="">
+              <form method="POST" class="my-login-validation" action="/login_response/">
                 <div class="form-group">
                   <label for="email">E-Mail Address</label>
                   <input id="email" type="email" class="form-control" name="email" value="" required autofocus>
@@ -47,13 +44,12 @@
                       Password is required
                     </div>
                 </div>
-
-                <div class="form-group">
+             <!-- <div class="form-group">
                   <div class="custom-checkbox custom-control">
                     <input type="checkbox" name="remember" id="remember" class="custom-control-input">
-                    <label for="remember" class="custom-control-label">Remeber Me</label>
+                    <label for="remember" class="custom-control-label">Remember Me</label>
                   </div>
-                </div>
+                </div>-->
 
                 <div class="form-group m-0">
                   <button type="submit" class="btn btn-primary btn-block">
