last update on 19-11-18, with "free "

--- a/timetable/templates/timetable/welcometeach.html
+++ b/timetable/templates/timetable/welcometeach.html
@@ -31,7 +31,7 @@
               <ul class="list-unstyled mb-5 position-relative">
                 <li><b>REQUEST</b> the free period for the week.</li>
               </ul>
-              <button type="button" class="btn btn-lg btn-block  btn-custom "onclick="window.location.href='/freehour'">PROCEED</button>
+              <button type="button" class="btn btn-lg btn-block  btn-custom "onclick="window.location.href='/requestfp'">PROCEED</button>
             </div>
           </div>
                 
@@ -55,15 +55,11 @@
             <div class="card-body bg-white mt-0 shadow">
               <ul class="list-unstyled mb-5 position-relative">
                 <li><b>VIEW</b> the generated time table.</li>
-      
               </ul>
               <button type="button" class="btn btn-lg btn-block  btn-custom "onclick="window.location.href='/view'">PROCEED</button>
             </div>
           </div>
                 
-          
-          
-          
           
           
         </div>
